# rate-curve-backfill

./: README.md  pyproject.toml  requirements.txt  run.py
data/raw/: treasury_gfc_raw.csv
evaluation/: k_comparison.csv  results_summary.csv
output/: anomaly_report.json  backfill_metadata.json
pipeline/: analyse_gaps.py  anomaly_explain.py  evaluate.py  impute_baseline.py  impute_knn.py  ingest.py  validate.py
tests/: test_evaluate.py  test_evaluation_mechanics.py  test_impute_knn.py
